Fixed RPM building and ISO generation issues